--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,19 @@
   --font-league-spartan: "League Spartan", sans-serif;
 
   --orange: #e48162;
-  --yellow: #f4e281;
-  --white: #f6f2ef;
-  -purple: #4d243d;
+  --jaune: #f4e281;
+  --blanc: #f6f2ef;
+  --violet: #4d243d;
 }
 
+h2 {
+  font-size: 14px;
+  font-weight: 400;
+}
+h3 {
+  font-size: 12px;
+  font-weight: 400;
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -19,7 +27,7 @@
 
 html,
 body {
-  background-color: var(--white);
+  background-color: var(--blanc);
   max-width: 100vw;
   overflow-x: hidden;
 }
