--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,64 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+ul {
+  list-style-type: none; /* Retirer les points des ul */
+  padding: 0;
+}
+li {
+  margin-bottom: 15px;
+}
+
+label {
+  color: var(--blanc);
+  font-size: 12px;
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="email"],
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid var(--orange);
+  background-color: var(--orange);
+  border-radius: 50px; /* Border radius de 50 */
+  box-sizing: border-box;
+}
+
+input {
+  outline: none; /* Enlève le contour bleu */
+}
+
+textarea {
+  width: 100%;
+  height: 92px;
+  padding: 10px;
+  border: 1px solid var(--orange);
+  background-color: var(--orange);
+  border-radius: 10px; /* Border radius de 10 */
+  box-sizing: border-box;
+  resize: vertical;
+}
+textarea:focus {
+  outline: none; /* Enlève le contour bleu */
+}
+form {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 10px;
+}
+button {
+  padding: 10px 20px;
+  background-color: var(--orange);
+  color: var(--blanc);
+  border: none;
+  border-radius: 50px;
+  font-size: 16px;
+  cursor: pointer;
+
+  display: block;
+  margin: 0 auto;
+}
