--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -5,15 +5,211 @@
 .subtitle {
   font-family: var(--font-roboto-mono);
 }
+.triangular-div {
+  width: 0;
+  height: 0;
+  border-left: 340px solid transparent;
+  border-bottom: 350px solid var(--jaune);
+  position: relative;
+  bottom: 65px; /* Adjust position as needed */
+  rotate: 270deg;
+}
 
-@media (max-width: 375px) {
+.purpleHr {
+  border-top: 3px solid var(--violet);
+  color: var(--violet);
+  z-index: 2;
+}
+
+.menuHr {
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  right: 10px; /* Adjust as needed */
+  width: 40px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.menuHr hr {
+  margin: 0;
+  width: 100%;
+}
+
+/* Tablet CSS */
+
+@media (min-width: 376px) and (max-width: 768px) {
+  .containerTitre {
+    margin-left: 12px;
+  }
   .title {
     font-family: var(--font-roboto-mono);
     font-size: 24px;
+    color: var(--blanc);
   }
 
   .subtitle {
     font-family: var(--font-roboto-mono);
     font-size: 14px;
+    color: var(--violet);
+  }
+  .triangularDiv {
+    width: 0;
+    height: 0;
+    border-left: 180px solid transparent;
+    border-bottom: 180px solid var(--jaune);
+    position: absolute;
+    rotate: 270deg;
+    z-index: 2;
+    align-self: flex-end;
+  }
+  .menuContainer {
+    background-color: var(--orange); /* Div with var(--orange) background */
+  }
+  .yellowHr {
+    color: var(--jaune);
+    border-top: 1px solid var(--jaune);
+    background-color: var(--jaune);
+    width: 204px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    background-color: var(--blanc);
+    position: absolute;
+    top: 0px;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+  }
+
+  .list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .item {
+    width: 233px;
+    margin: 0 71px;
+    text-align: center;
+  }
+
+  .violet {
+    color: var(--violet);
+  }
+
+  .orange {
+    color: var(--orange);
+  }
+
+  .jauneBackground {
+    background-color: var(--jaune);
+  }
+
+  .orangeBackground {
+    background-color: var(--orange);
+  }
+
+  .violetBackground {
+    background-color: var(--violet);
+  }
+}
+
+/* Mobile CSS */
+
+@media (max-width: 375px) {
+  .containerTitre {
+    margin-left: 9px;
+  }
+  .title {
+    font-family: var(--font-roboto-mono);
+    font-size: 24px;
+    color: var(--blanc);
+  }
+
+  .subtitle {
+    font-family: var(--font-roboto-mono);
+    font-size: 14px;
+    color: var(--violet);
+  }
+  .triangularDiv {
+    width: 0;
+    height: 0;
+    border-left: 180px solid transparent;
+    border-bottom: 180px solid var(--jaune);
+    position: absolute;
+    rotate: 270deg;
+    z-index: 2;
+    align-self: flex-end;
+  }
+  .menuContainer {
+    background-color: var(--orange); /* Div with var(--orange) background */
+  }
+  .yellowHr {
+    color: var(--jaune);
+    border-top: 1px solid var(--jaune);
+    background-color: var(--jaune);
+    width: 204px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    background-color: var(--blanc);
+    position: absolute;
+    top: 0px;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+  }
+
+  .list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .item {
+    width: 233px;
+    margin: 0 71px;
+    text-align: center;
+  }
+
+  .violet {
+    color: var(--violet);
+  }
+
+  .orange {
+    color: var(--orange);
+  }
+
+  .jauneBackground {
+    background-color: var(--jaune);
+    margin-block: 25px;
+    height: 47px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .orangeBackground {
+    background-color: var(--orange);
+    height: 47px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .violetBackground {
+    background-color: var(--violet);
+    height: 47px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
