--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
 }
 
 h2 {
-  font-size: 14px;
+  font-size: 1.5vw;
   font-weight: 400;
 }
 h3 {
@@ -23,6 +23,7 @@ h3 {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: 0.3s;
 }
 
 html,
