--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -36,9 +36,346 @@
   border-width: 0.5vh;
 }
 
+/* Boite, titre + contenu */
+.moduleContainer {
+  position: relative;
+  margin-bottom: 2.22vh;
+}
+
+.titreJaune,
+.titreOrange {
+  position: absolute;
+  top: 0;
+  left: 9.47vw;
+  width: 14vw;
+  height: 7.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+.titreJaune {
+  background-color: var(--jaune);
+}
+.moduleContainer {
+  position: relative;
+  margin-bottom: 2.22vh; /* 20px converted to vh */
+}
+
+.titreJaune h2 {
+  color: var(--violet);
+  font-weight: 400;
+  font-size: 1.5vw; /* 16px converted to vh */
+}
+
+.titreOrange {
+  background-color: var(--orange);
+}
+
+.titreOrange h2 {
+  color: var(--blanc);
+  font-weight: 400;
+  font-size: 1.5vw; /* 16px converted to vh */
+}
+.contenuViolet,
+.contenuJaune {
+  position: relative;
+  margin-left: 12.14vw;
+  margin-right: 11.35vw;
+  padding-top: 2vh;
+  margin-top: 2vh;
+  width: 100%;
+}
+
+.contenuViolet {
+  background-color: var(--violet);
+}
+
+.contenuJaune {
+  background-color: var(--jaune);
+}
+
+.contenuViolet p,
+.contenuJaune p {
+  color: var(--blanc);
+  font-family: var(--font-roboto-mono);
+  font-size: 2.5vh;
+  font-weight: 400;
+  margin-inline: 5.85vw;
+  padding-top: 4.89vh;
+  padding-bottom: 9.89vh;
+}
+
+/* Jauge Compétences */
+
+.competencesModule {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.678vw;
+}
+.competencesModule h2 {
+  color: var(--violet);
+  font-size: 2.157vw;
+}
+
+.competenceSection {
+  margin-left: 2.373vw;
+  margin-right: 1.505vw;
+  padding: 1.273vw;
+}
+.jauge {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.694vw;
+}
+.jauge h3 {
+  color: var(--violet);
+  font-size: 1vw;
+}
+
+.barreFond {
+  background-color: var(--orange);
+  height: 1vw;
+  width: 65vw;
+  border-radius: 50px;
+}
+.barreRemplie {
+  background-color: var(--violet);
+  height: 1vw;
+  border-radius: 2.894vw;
+}
+
+/* Porfolio */
+
+.portfolioContainer {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-gap: 3.877vw 3.414vw;
+  justify-content: center;
+  align-items: center;
+  margin: 1.563vw;
+}
+.portfolio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 9.086vw;
+  height: 9.086vw;
+  border-radius: 50%;
+  background-color: var(--orange);
+}
 /* -----------------RESPONSIVE-------------------------- */
 
-@media (max-width: 375px) {
+/* Tablet CSS */
+@media (min-width: 462px) and (max-width: 768px) {
+  /* Boite, titre + contenu */
+  .moduleContainer {
+    position: relative;
+    margin-bottom: 20px; /* Ajoute de l'espace entre les modules */
+  }
+
+  .titreJaune,
+  .titreOrange {
+    position: absolute; /* Absolutement positionné par rapport au conteneur */
+    top: 0;
+    left: 9px;
+    width: 109px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+  }
+
+  .titreJaune {
+    background-color: var(--jaune);
+  }
+
+  .titreJaune h2 {
+    color: var(--violet);
+    font-weight: 400;
+    font-size: 16px;
+  }
+
+  .titreOrange {
+    background-color: var(--orange);
+  }
+
+  .titreOrange h2 {
+    color: var(--blanc);
+    font-weight: 400;
+    font-size: 16px;
+  }
+
+  .contenuViolet,
+  .contenuJaune {
+    position: relative;
+    background-color: var(--violet);
+    margin-left: 41px;
+    margin-right: 26px;
+    padding-top: 18px; /* Pour compenser la hauteur du titre */
+    margin-top: 18px; /* Pour que le contenu commence à mi-hauteur du titre */
+    width: 100%;
+  }
+
+  .contenuViolet {
+    background-color: var(--violet);
+  }
+
+  .contenuJaune {
+    background-color: var(--jaune);
+    margin-left: 41px;
+    margin-right: 26px;
+  }
+
+  .contenuViolet p,
+  .contenuJaune p {
+    color: var(--blanc);
+    font-family: var(--font-roboto-mono);
+    font-size: 14px;
+    font-weight: 400;
+    margin-inline: 97px;
+    padding-top: 26px;
+    padding-bottom: 44px;
+  }
+
+  /* Jauge Compétences */
+
+  .competencesModule {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 29px;
+  }
+  .competencesModule h2 {
+    color: var(--violet);
+    font-size: 20px;
+  }
+
+  .competenceSection {
+    margin-left: 41px;
+    margin-right: 26px;
+    padding: 22px;
+  }
+  .jauge {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+  }
+  .jauge h3 {
+    color: var(--violet);
+    font-size: 14px;
+  }
+
+  .barreFond {
+    background-color: var(--orange);
+    height: 10px;
+    width: 65vw;
+    border-radius: 50px;
+  }
+  .barreRemplie {
+    background-color: var(--violet);
+    height: 10px;
+    border-radius: 50px;
+  }
+
+  /* Porfolio */
+  .portfolioContainer {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 67px 59px;
+    justify-content: center;
+    align-items: center;
+    margin: 27px;
+  }
+  .portfolio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 157px;
+    height: 157px;
+    border-radius: 50%;
+    background-color: var(--orange);
+  }
+
+  /* A propos */
+
+  .aboutTitre {
+    background-color: var(--orange);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-inline: 27px;
+    height: 44px;
+    border-radius: 4px;
+    margin-top: 10px;
+  }
+  .aboutTitre h2 {
+    font-size: 20px;
+    color: var(--blanc);
+    font-weight: 400;
+  }
+  .about {
+    margin-top: 10px;
+  }
+  .about p {
+    font-size: 14px;
+    color: var(--violet);
+    font-weight: 500;
+  }
+
+  /* Contact */
+  /* Oval */
+
+  .oval {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-color: var(--orange);
+    border-radius: 50%; /* Pour rendre l'élément ovale */
+  }
+
+  .oval1 {
+    height: 30vh;
+    border-width: 3vw;
+  }
+
+  .oval2 {
+    height: 27vh;
+    border-width: 0.5vw;
+  }
+  .oval3 {
+    height: 25vh;
+    border-width: 3vw;
+  }
+  .oval4 {
+    height: 22vh;
+    border-width: 0.5vw;
+  }
+  .OvalText {
+    color: var(--blanc);
+    display: flex;
+    flex-direction: column;
+    justify-content: "center";
+    align-items: center;
+  }
+  .OvalText h2 {
+    color: var(--blanc);
+  }
+
+  .contactTitle {
+    color: var(--blanc);
+    font-size: 20px;
+    text-align: center;
+    margin-top: 43px;
+  }
+}
+
+/* Mobile CSS */
+@media (max-width: 462px) {
   /* Boite, titre + contenu */
   .moduleContainer {
     position: relative;
@@ -86,6 +423,7 @@
     margin-right: 26px;
     padding-top: 18px; /* Pour compenser la hauteur du titre */
     margin-top: 18px; /* Pour que le contenu commence à mi-hauteur du titre */
+    width: 100%;
   }
 
   .contenuViolet {
@@ -102,7 +440,7 @@
     font-family: var(--font-roboto-mono);
     font-size: 12px;
     font-weight: 400;
-    margin-inline: 27px;
+    margin-inline: 36px;
     padding-top: 26px;
     padding-bottom: 44px;
   }
@@ -117,6 +455,7 @@
   }
   .competencesModule h2 {
     color: var(--violet);
+    font-size: 18px;
   }
 
   .competenceSection {
@@ -134,7 +473,7 @@
   .barreFond {
     background-color: var(--orange);
     height: 10px;
-    width: 263px;
+    width: 65vw;
     border-radius: 50px;
   }
   .barreRemplie {
@@ -164,9 +503,6 @@
 
   /* A propos */
 
-  .about {
-    margin-top: 23px;
-  }
   .aboutTitre {
     background-color: var(--orange);
     display: flex;
@@ -175,9 +511,10 @@
     margin-inline: 27px;
     height: 24px;
     border-radius: 4px;
+    margin-top: 10px;
   }
   .aboutTitre h2 {
-    font-size: 14;
+    font-size: 14px;
     color: var(--blanc);
     font-weight: 400;
   }
@@ -185,6 +522,7 @@
     font-size: 12px;
     color: var(--violet);
     font-weight: 500;
+    padding-bottom: 20px;
   }
 
   /* Contact */
@@ -200,20 +538,20 @@
   }
 
   .oval1 {
-    height: 40vh;
+    height: 30vh;
     border-width: 3vw;
   }
 
   .oval2 {
-    height: 35vh;
+    height: 27vh;
     border-width: 0.5vw;
   }
   .oval3 {
-    height: 33vh;
+    height: 25vh;
     border-width: 3vw;
   }
   .oval4 {
-    height: 28vh;
+    height: 22vh;
     border-width: 0.5vw;
   }
   .OvalText {
