--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -76,8 +76,8 @@
   border-left: 60.52vw solid transparent;
   border-top: 39.81vh solid var(--jaune);
   position: absolute;
-  top: 0; /* Ajustez cette valeur selon les besoins */
-  right: 0; /* Ajustez cette valeur selon les besoins */
+  top: 0;
+  right: 0;
   z-index: 2;
 }
 /* ----/---- */
@@ -87,8 +87,8 @@
   top: 0;
   right: 0;
   z-index: 3;
-  margin-top: 2.125vh; /* 17px / hauteur de la vue * 100 */
-  margin-right: 3.5vw; /* 28px / largeur de la vue * 100 */
+  margin-top: 2.125vh;
+  margin-right: 3.5vw;
 }
 
 .listMenu {
@@ -97,12 +97,12 @@
   margin: 0;
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-auto-rows: 5vh; /* 50px / hauteur de la vue * 100 */
-  gap: 1vw; /* 10px / largeur de la vue * 100 */
+  grid-auto-rows: 5vh;
+  gap: 1.5vw;
 }
 
 .itemMenu {
-  width: 13.1vw; /* 233px / largeur de la vue * 100 */
+  width: 13.1vw;
   text-align: center;
   background-color: lightgray;
   display: flex;
@@ -144,7 +144,7 @@
 .jauneBackgroundMenu,
 .orangeBackgroundMenu,
 .violetBackgroundMenu {
-  height: 5vh;
+  height: 5.5vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -156,10 +156,20 @@
 
 .orangeBackgroundMenu {
   background-color: var(--orange);
+  cursor: pointer;
 }
 
+.orangeBackgroundMenu:hover {
+  background-color: var(--orangeFonce);
+  cursor: pointer;
+}
 .violetBackgroundMenu {
   background-color: var(--violet);
+  cursor: pointer;
+}
+.violetBackgroundMenu:hover {
+  background-color: var(--violetFonce);
+  cursor: pointer;
 }
 
 /* Tablet and small tablet CSS */
