--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,42 +1,35 @@
 /* CSS PAGE PRINCIPALE */
 
+/* General Styles */
 .errorMsg {
   color: red;
 }
+.fleche {
+  position: fixed;
+  z-index: 1000;
+  left: 90vw;
+  top: 80vh;
+}
 
-.oval {
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  border-style: solid;
-  border-color: var(--orange);
-  border-radius: 50%; /* Pour rendre l'élément ovale */
-}
-.oval1 {
-  width: 86.4vw;
-  height: 73.727vh;
-  border-width: 4vh;
+  z-index: 1000;
 }
 
-.oval2 {
-  width: 78.819vw;
-  height: 64.931vh;
-  border-width: 1vh;
+.modalContent {
+  position: relative;
+  z-index: 1001;
 }
 
-.oval3 {
-  width: 76.563vw;
-  height: 61.227vh;
-  border-width: 3vh;
-}
-
-.oval4 {
-  width: 69.56vw;
-  height: 54.225vh;
-  border-width: 0.5vh;
-}
-
-/* Boite, titre + contenu */
+/* Module Container */
 .moduleContainer {
   position: relative;
   margin-bottom: 2.22vh;
@@ -58,15 +51,11 @@
 .titreJaune {
   background-color: var(--jaune);
 }
-.moduleContainer {
-  position: relative;
-  margin-bottom: 2.22vh; /* 20px converted to vh */
-}
 
 .titreJaune h2 {
   color: var(--violet);
   font-weight: 400;
-  font-size: 1.5vw; /* 16px converted to vh */
+  font-size: 1.5vw;
 }
 
 .titreOrange {
@@ -76,15 +65,15 @@
 .titreOrange h2 {
   color: var(--blanc);
   font-weight: 400;
-  font-size: 1.5vw; /* 16px converted to vh */
+  font-size: 1.5vw;
 }
+
+/* Content Styles */
 .contenuViolet,
 .contenuJaune {
   position: relative;
-  margin-left: 12.14vw;
-  margin-right: 11.35vw;
-  padding-top: 2vh;
-  margin-top: 2vh;
+  margin: 2vh 20vw 0px 20.14vw;
+  padding-top: 5vh;
   width: 100%;
 }
 
@@ -100,55 +89,75 @@
 .contenuJaune p {
   color: var(--blanc);
   font-family: var(--font-roboto-mono);
-  font-size: 2.5vh;
+  font-size: 1.2vw;
   font-weight: 400;
   margin-inline: 5.85vw;
-  padding-top: 4.89vh;
-  padding-bottom: 9.89vh;
+  padding: 4.89vh 0 9.89vh;
 }
 
-/* Jauge Compétences */
-
+/* Competence Module */
 .competencesModule {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 1.678vw;
 }
+
 .competencesModule h2 {
   color: var(--violet);
   font-size: 2.157vw;
 }
 
 .competenceSection {
-  margin-left: 2.373vw;
-  margin-right: 1.505vw;
+  margin: 0 1.505vw 0 2.373vw;
   padding: 1.273vw;
 }
+
 .jauge {
   display: flex;
   flex-direction: column;
   margin-bottom: 0.694vw;
 }
+
 .jauge h3 {
   color: var(--violet);
-  font-size: 1vw;
+  font-size: 1.3vw;
 }
 
 .barreFond {
   background-color: var(--orange);
   height: 1vw;
-  width: 65vw;
+  width: 52vw;
   border-radius: 50px;
 }
+
 .barreRemplie {
   background-color: var(--violet);
   height: 1vw;
   border-radius: 2.894vw;
+  transform-origin: left;
+  animation: yoyo 1s linear !important;
+}
+.barreRemplie:hover {
+  animation: yoyo 1s linear !important;
 }
 
-/* Porfolio */
+@keyframes yoyo {
+  0% {
+    transform: scaleX(0.4);
+  }
+  40% {
+    transform: scaleX(1);
+  }
+  60% {
+    transform: scaleX(0.9);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
 
+/* Portfolio */
 .portfolioContainer {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -157,6 +166,7 @@
   align-items: center;
   margin: 1.563vw;
 }
+
 .portfolio {
   display: flex;
   justify-content: center;
@@ -165,165 +175,220 @@
   height: 9.086vw;
   border-radius: 50%;
   background-color: var(--orange);
+  cursor: pointer;
 }
-/* -----------------RESPONSIVE-------------------------- */
+.portfolio:hover {
+  background-color: var(--orangeFonce);
+}
+.portfolio h2 {
+  color: var(--blanc);
+}
+/* About */
+.aboutTitre {
+  background-color: var(--orange);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline: 8.958vw;
+  height: 7.292vw;
+  border-radius: 2.604vw;
+  margin-top: 0.521vw;
+}
+.aboutTitre:hover {
+  background-color: var(--orangeFonce);
+}
 
-/* Tablet CSS */
-@media (min-width: 462px) and (max-width: 768px) {
-  /* Boite, titre + contenu */
+.aboutTitre h2 {
+  font-size: 2.5vw;
+  color: var(--blanc);
+  font-weight: 400;
+}
+
+.about {
+  margin-top: 1vw;
+}
+
+.about p {
+  font-size: 1.2vw;
+  color: var(--violet);
+  font-weight: 500;
+  padding: 2svw !important;
+}
+
+/* Contact */
+
+.oval {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-style: solid;
+  border-color: var(--orange);
+  border-radius: 50%; /* Pour rendre l'élément ovale */
+}
+.oval1 {
+  width: 50vw;
+  height: 70vh;
+  border-width: 2vw;
+}
+
+.oval2 {
+  width: 44vw;
+  height: 61vh;
+  border-width: 0.5vw;
+}
+.oval3 {
+  width: 42vw;
+  height: 58vh;
+  border-width: 2vw;
+}
+.oval4 {
+  width: 35vw;
+  height: 48vh;
+  border-width: 0.5vw;
+}
+
+.contactTitle {
+  color: var(--blanc);
+  font-size: 2.2vw;
+  text-align: center;
+  margin-top: 43px;
+}
+
+.visible {
+  visibility: visible;
+  height: 100%;
+  transition: 2s;
+  animation: fadeIn 1s linear;
+}
+.hidden {
+  display: none;
+  height: 0px;
+  animation: fadeOut 1s linear;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.OvalText {
+  color: var(--blanc);
+  display: flex;
+  flex-direction: column;
+  justify-content: "center";
+  align-items: center;
+}
+.OvalText h2 {
+  color: var(--blanc);
+}
+.contactTitle {
+  color: var(--blanc);
+  font-size: 2vw;
+  text-align: center;
+  margin-top: 43px;
+}
+.imagesContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 1vh;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 768px) {
   .moduleContainer {
-    position: relative;
-    margin-bottom: 20px; /* Ajoute de l'espace entre les modules */
+    margin-bottom: 20px;
   }
 
   .titreJaune,
   .titreOrange {
-    position: absolute; /* Absolutement positionné par rapport au conteneur */
-    top: 0;
     left: 9px;
     width: 109px;
     height: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
   }
 
-  .titreJaune {
-    background-color: var(--jaune);
-  }
-
-  .titreJaune h2 {
-    color: var(--violet);
-    font-weight: 400;
-    font-size: 16px;
-  }
-
-  .titreOrange {
-    background-color: var(--orange);
-  }
-
+  .titreJaune h2,
   .titreOrange h2 {
-    color: var(--blanc);
-    font-weight: 400;
     font-size: 16px;
   }
 
   .contenuViolet,
   .contenuJaune {
-    position: relative;
-    background-color: var(--violet);
-    margin-left: 41px;
-    margin-right: 26px;
-    padding-top: 18px; /* Pour compenser la hauteur du titre */
-    margin-top: 18px; /* Pour que le contenu commence à mi-hauteur du titre */
-    width: 100%;
-  }
-
-  .contenuViolet {
-    background-color: var(--violet);
-  }
-
-  .contenuJaune {
-    background-color: var(--jaune);
-    margin-left: 41px;
-    margin-right: 26px;
+    margin: 18px 26px 0 41px;
+    padding-top: 18px;
   }
 
   .contenuViolet p,
   .contenuJaune p {
-    color: var(--blanc);
-    font-family: var(--font-roboto-mono);
-    font-size: 14px;
-    font-weight: 400;
-    margin-inline: 97px;
-    padding-top: 26px;
-    padding-bottom: 44px;
+    font-size: 2.5vw;
+    margin-inline: 36px;
+    padding: 26px 0 44px;
   }
-
-  /* Jauge Compétences */
 
   .competencesModule {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-bottom: 29px;
   }
+
   .competencesModule h2 {
-    color: var(--violet);
     font-size: 20px;
   }
 
   .competenceSection {
-    margin-left: 41px;
-    margin-right: 26px;
+    margin: 0;
     padding: 22px;
   }
+
   .jauge {
-    display: flex;
-    flex-direction: column;
     margin-bottom: 12px;
   }
+
   .jauge h3 {
-    color: var(--violet);
     font-size: 14px;
   }
 
-  .barreFond {
-    background-color: var(--orange);
+  .barreFond,
+  .barreRemplie {
     height: 10px;
     width: 65vw;
-    border-radius: 50px;
-  }
-  .barreRemplie {
-    background-color: var(--violet);
-    height: 10px;
-    border-radius: 50px;
   }
 
-  /* Porfolio */
   .portfolioContainer {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
     grid-gap: 67px 59px;
-    justify-content: center;
-    align-items: center;
     margin: 27px;
   }
+
   .portfolio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 157px;
     height: 157px;
-    border-radius: 50%;
-    background-color: var(--orange);
   }
 
-  /* A propos */
-
   .aboutTitre {
-    background-color: var(--orange);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-inline: 27px;
     height: 44px;
     border-radius: 4px;
     margin-top: 10px;
   }
+
   .aboutTitre h2 {
     font-size: 20px;
-    color: var(--blanc);
-    font-weight: 400;
   }
-  .about {
-    margin-top: 10px;
-  }
+
   .about p {
     font-size: 14px;
-    color: var(--violet);
-    font-weight: 500;
   }
 
   /* Contact */
@@ -339,189 +404,59 @@
   }
 
   .oval1 {
-    height: 30vh;
-    border-width: 3vw;
+    width: 80vw;
+    height: 50vh;
+    border-width: 2vw;
   }
 
   .oval2 {
-    height: 27vh;
+    width: 74vw;
+    height: 45vh;
     border-width: 0.5vw;
   }
   .oval3 {
-    height: 25vh;
-    border-width: 3vw;
+    width: 72vw;
+    height: 42vh;
+    border-width: 2vw;
   }
   .oval4 {
-    height: 22vh;
+    width: 65vw;
+    height: 36vh;
     border-width: 0.5vw;
-  }
-  .OvalText {
-    color: var(--blanc);
-    display: flex;
-    flex-direction: column;
-    justify-content: "center";
-    align-items: center;
-  }
-  .OvalText h2 {
-    color: var(--blanc);
   }
 
   .contactTitle {
-    color: var(--blanc);
     font-size: 20px;
-    text-align: center;
-    margin-top: 43px;
   }
 }
 
-/* Mobile CSS */
 @media (max-width: 462px) {
-  /* Boite, titre + contenu */
-  .moduleContainer {
-    position: relative;
-    margin-bottom: 20px; /* Ajoute de l'espace entre les modules */
-  }
-
-  .titreJaune,
-  .titreOrange {
-    position: absolute; /* Absolutement positionné par rapport au conteneur */
-    top: 0;
-    left: 9px;
-    width: 109px;
-    height: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
-  }
-
-  .titreJaune {
-    background-color: var(--jaune);
-  }
-
-  .titreJaune h2 {
-    color: var(--violet);
-    font-weight: 400;
-    font-size: 14px;
-  }
-
-  .titreOrange {
-    background-color: var(--orange);
-  }
-
+  .titreJaune h2,
   .titreOrange h2 {
-    color: var(--blanc);
-    font-weight: 400;
     font-size: 14px;
-  }
-
-  .contenuViolet,
-  .contenuJaune {
-    position: relative;
-    background-color: var(--violet);
-    margin-left: 41px;
-    margin-right: 26px;
-    padding-top: 18px; /* Pour compenser la hauteur du titre */
-    margin-top: 18px; /* Pour que le contenu commence à mi-hauteur du titre */
-    width: 100%;
-  }
-
-  .contenuViolet {
-    background-color: var(--violet);
-  }
-
-  .contenuJaune {
-    background-color: var(--jaune);
   }
 
   .contenuViolet p,
   .contenuJaune p {
-    color: var(--blanc);
-    font-family: var(--font-roboto-mono);
-    font-size: 12px;
-    font-weight: 400;
+    font-size: 4vw;
     margin-inline: 36px;
-    padding-top: 26px;
-    padding-bottom: 44px;
   }
 
-  /* Jauge Compétences */
-
-  .competencesModule {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 29px;
-  }
   .competencesModule h2 {
-    color: var(--violet);
     font-size: 18px;
   }
 
-  .competenceSection {
-    padding: 22px;
-  }
-  .jauge {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 12px;
-  }
-  .jauge h3 {
-    color: var(--violet);
-  }
-
-  .barreFond {
-    background-color: var(--orange);
-    height: 10px;
-    width: 65vw;
-    border-radius: 50px;
-  }
-  .barreRemplie {
-    background-color: var(--violet);
-    height: 10px;
-    border-radius: 50px;
-  }
-
-  /* Porfolio */
-  .portfolioContainer {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-gap: 67px 59px;
-    justify-content: center;
-    align-items: center;
-    margin: 27px;
-  }
   .portfolio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 97px; /* 2 * 48.5px */
-    height: 97px; /* 2 * 48.5px */
-    border-radius: 50%;
-    background-color: var(--orange);
+    width: 97px;
+    height: 97px;
   }
 
-  /* A propos */
-
-  .aboutTitre {
-    background-color: var(--orange);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-inline: 27px;
-    height: 24px;
-    border-radius: 4px;
-    margin-top: 10px;
-  }
   .aboutTitre h2 {
     font-size: 14px;
-    color: var(--blanc);
-    font-weight: 400;
   }
+
   .about p {
     font-size: 12px;
-    color: var(--violet);
-    font-weight: 500;
     padding-bottom: 20px;
   }
 
@@ -538,19 +473,23 @@
   }
 
   .oval1 {
+    width: 80vw;
     height: 30vh;
-    border-width: 3vw;
+    border-width: 2vw;
   }
 
   .oval2 {
+    width: 74vw;
     height: 27vh;
     border-width: 0.5vw;
   }
   .oval3 {
+    width: 72vw;
     height: 25vh;
-    border-width: 3vw;
+    border-width: 2vw;
   }
   .oval4 {
+    width: 65vw;
     height: 22vh;
     border-width: 0.5vw;
   }
