--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -184,9 +184,15 @@
   color: var(--blanc);
 }
 /* About */
-.aboutTitre {
+.largeHeight {
+  transition: 1s;
   height: 12vw;
 }
+.smallHeight {
+  transition: 1s;
+  height: 7vw;
+}
+
 .aboutTitre {
   background-color: var(--orange);
   cursor: pointer;
@@ -194,7 +200,6 @@
   justify-content: center;
   align-items: center;
   margin-inline: 8.958vw;
-  height: 7.292vw;
   border-radius: 2.604vw;
   margin-top: 0.521vw;
 }
@@ -338,7 +343,7 @@
   .contenuViolet p,
   .contenuJaune p {
     font-size: 2.5vw;
-    margin-inline: 36px;
+    margin-inline: 46px;
     padding: 26px 0 44px;
   }
 
@@ -379,9 +384,19 @@
     height: 157px;
   }
 
+  /* About */
+
+  .largeHeight {
+    transition: 1s;
+    height: 20vw;
+  }
+  .smallHeight {
+    transition: 1s;
+    height: 10vw;
+  }
+
   .aboutTitre {
     margin-inline: 27px;
-    height: 44px;
     border-radius: 4px;
     margin-top: 10px;
   }
@@ -454,9 +469,16 @@
     height: 97px;
   }
 
-  .aboutTitre {
-    height: 25vw;
+  /* About */
+  .largeHeight {
+    transition: 1s;
+    height: 20vw;
   }
+  .smallHeight {
+    transition: 1s;
+    height: 10vw;
+  }
+
   .aboutTitre h2 {
     font-size: 14px;
   }
