--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,6 +101,101 @@ button {
   margin: 0 auto;
 }
 
+/* react calendar */
+
+.react-calendar__navigation {
+  display: flex;
+}
+.calendarInside .react-calendar__navigation button {
+  width: 10% !important ;
+  color: white;
+  font-size: x-large;
+  border: none;
+  cursor: pointer;
+}
+
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: rgb(248, 248, 250);
+}
+
+.react-calendar__navigation button[disabled] {
+  background-color: rgb(240, 240, 240);
+}
+
+.react-calendar__navigation__label__labelText {
+  color: white !important;
+}
+.react-calendar__navigation button {
+  background-color: #159dd2;
+  color: #371a2c;
+}
+.react-calendar__navigation__label {
+  background-color: #159dd2;
+  color: #371a2c;
+}
+.react-calendar__tile {
+  display: flex;
+  justify-content: center !important;
+  width: 50px;
+  height: 50px;
+  background: rgb(248, 248, 250);
+  border-radius: 0px !important;
+  cursor: pointer;
+  font-size: 1.2em;
+  color: black;
+}
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  border: 1px solid #159dd2;
+  background: #f8f8fa;
+  color: rgb(60, 143, 190);
+}
+
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  border: 3px solid #159dd2;
+  font-weight: bold;
+  color: rgb(60, 143, 190);
+}
+.react-calendar__tile--now,
+.react-calendar__tile--now {
+  font-weight: bold;
+  color: rgb(60, 143, 190);
+  border: 3px solid #159dd2 !important;
+}
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+  background: rgb(248, 248, 250);
+}
+.react-calendar__tile--active {
+  background: rgb(60, 143, 190);
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+  background: rgb(60, 143, 190);
+  color: rgb(255, 255, 255);
+}
+.react-calendar--selectRange .react-calendar__tile--hover {
+  background-color: rgb(248, 248, 250);
+}
+.react-calendar__tile--range {
+  background: rgb(248, 248, 250);
+  color: rgb(60, 143, 190);
+  border-radius: 0;
+}
+.react-calendar__tile--rangeStart {
+  background: rgb(0, 128, 0);
+  color: rgb(255, 255, 255);
+}
+.react-calendar__tile--rangeEnd {
+  background: rgb(60, 143, 190);
+  border: 2px solid rgb(2, 68, 105);
+  color: rgb(255, 255, 255);
+}
+
 @media (max-width: 462px) {
   h2 {
     font-size: 3.7vw !important;
